# pixeldot

./: CLAUDE.md  LICENSE  PIXEL_ART_PROMPT.md  README.md  pyproject.toml
.claude/commands/: pixel-art.md
src/pixeldot/: __init__.py  __main__.py  _skill_template.py  analysis.py  canvas.py  color.py  color_utils.py  extended_palette.py  fast_sprite.py  io.py  layers.py  preview.py  region.py  sheet.py  spec.py  sprite.py  style.py  tiles.py
tests/: test_canvas.py  test_color_utils.py  test_extended_palette.py  test_fast_sprite.py  test_layers.py  test_roundtrip.py  test_spec.py  test_sprite.py  test_style.py  test_tiles.py
